* 2007-08-03 - francisco.laguna@open-xchange.com

 - Fixed bug #8673. Added a new servletmapping to allow Vista Home Basic to connect
   on the first level. 
   
########### LOOK MA! NO HANDS! CONFIGCHANGE CONFIGCHANGE#############

in the servletmapping.properties we have a new entry:

infostore*:com.openexchange.webdav.Infostore

in the apache configuration:

JkMount /infostore ajp13
JkMount /infostore/ ajp13
JkMount /infostore/* ajp13

#####################################################################


* 2007-08-02 - martin.kauss@open-xchange.com

 - Fixed bug #6408. Reminders greater than 3 weeks did not work as expected
   because the calculation was done with an int instead of a long. Fixed.

* 2007-08-02 - sebastian.kauss@open-xchange.com

 - Fixed Bug #7393 - Folder 0 cannot be resolved
 - Fixed Bug #8618 - ICal import is possible if calendar module is disabled 
 - Fixed Bug #8635 - Use transaction to generate unique id for reminder
 - Fixed Bug #8545 - Reminder import use more database connections
 - Fixed Bug #7142 - Log permission exception as debug

* 2007-08-02 - marcus.klein@open-xchange.com

 - Bugfix #7936: Changed error messages for filestore, ajax and login.
 - Bugfix #7202: Fixed creating the next recurrence of tasks.
 - Bugfix #8301: Next Recurrence is only created if task state is changed to
   DONE.
 - Bugfix #7733: Changed error message for a task that has been changed by
   someone else.
 - Allowed creator to be participant of tasks.

* 2007-08-02 - thorben.betten@open-xchange.com

 - Fixed multiple mail requests

* 2007-08-02 - francisco.laguna@open-xchange.com

 - Bugfix #7936: Changed error messages for infostore and attachments. 

* 2007-08-01 - marcus.klein@open-xchange.com

 - Bugfix #8410: Changed SQL command for deleting task participants to not use
   if a value is within a set.
 - Bugfix #8253: Fixed NPE in checkConsistency tool.

* 2007-08-01 - francisco.laguna@open-xchange.com
